<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/bookingListFragment"
        android:icon="@drawable/ic_lessons"
        android:title="@string/nav_lessons" />

    <item
        android:id="@+id/courseListFragment"
        android:icon="@drawable/ic_courses"
        android:title="@string/nav_courses" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>

